back to classic theme

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://i8ramin.github.com
 title: Get Into This
-subtitle: Mobile. Web. Misc.
+subtitle: All the cool things.
 author: Ramin B.
 simple_search: http://google.com/search
 description:
