add google analytics and webmaster tools

--- a/_config.yml
+++ b/_config.yml
@@ -89,11 +89,11 @@ delicious_user:
 delicious_count: 3
 
 # Disqus Comments
-disqus_short_name:
-disqus_show_comment_count: false
+disqus_short_name: getintothis
+disqus_show_comment_count: true
 
 # Google Analytics
-google_analytics_tracking_id:
+google_analytics_tracking_id: UA-5464739-4
 
 # Facebook Like
 facebook_like: false
